avoid background flickering

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
 $primary: deepskyblue;
 $white: #fff;
-// $screen-bg: #333;
-$screen-bg: $primary;
+$screen-bg: #333;
+// $screen-bg: $primary;
